[gd_scene load_steps=12 format=3 uid="uid://bfnicevbagtf4"]

[ext_resource type="Script" path="res://Scenes/UI_scenes/system.gd" id="1_mux74"]
[ext_resource type="FontFile" uid="uid://cflm7ac265lwi" path="res://fonts/pixelgeorgia.ttf" id="2_n0v85"]
[ext_resource type="Theme" uid="uid://brxgl760huq47" path="res://Scenes/UI_scenes/Settings.tres" id="2_wrod0"]
[ext_resource type="AudioStream" uid="uid://bso7x6wk3cp8i" path="res://Audio/SFX/Menu/menu_close.wav" id="2_xinc4"]
[ext_resource type="Texture2D" uid="uid://cs8f1a8qnibu4" path="res://sprites/HUD/inventory/settings/Settings.png" id="3_433lo"]
[ext_resource type="AudioStream" uid="uid://hug8v3u8o4lv" path="res://Audio/SFX/Menu/CURSOL_MOVE.wav" id="3_xajym"]
[ext_resource type="LabelSettings" uid="uid://c28wx78vj7ejo" path="res://fonts/settings.tres" id="4_xcss6"]
[ext_resource type="LabelSettings" uid="uid://dt5s1nkwovr4v" path="res://fonts/stat_numbers.tres" id="5_ca0vt"]
[ext_resource type="Texture2D" uid="uid://k0iffxp6fqkw" path="res://sprites/HUD/pause_buttons/main_menu_button_hover.png" id="7_3kdbe"]
[ext_resource type="AudioStream" uid="uid://cvl4xunh1pyk8" path="res://Audio/SFX/Menu/CURSOL_OK.wav" id="10_wx0ec"]

[sub_resource type="LabelSettings" id="LabelSettings_y7utm"]
font = ExtResource("2_n0v85")
font_size = 40
font_color = Color(0.458824, 0.439216, 0.262745, 1)
shadow_size = 7
shadow_offset = Vector2(2, 1)

[node name="System" type="Control" node_paths=PackedStringArray("Master_slider", "Master_num", "SFX_slider", "SFX_num", "Music_slider", "Music_num", "a_close", "a_move", "a_quit")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mux74")
Master_slider = NodePath("Master")
Master_num = NodePath("Master_label/Master_number")
SFX_slider = NodePath("SFX")
SFX_num = NodePath("SFX_label/SFX_number")
Music_slider = NodePath("Music")
Music_num = NodePath("Music_label/Music_number")
a_close = NodePath("close")
a_move = NodePath("move")
a_quit = NodePath("quit")
metadata/_edit_lock_ = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1281.0
offset_bottom = 723.0
color = Color(0, 0, 0, 0.803922)
metadata/_edit_lock_ = true

[node name="Settings" type="Label" parent="."]
layout_mode = 0
offset_left = 549.0
offset_top = 162.0
offset_right = 739.0
offset_bottom = 202.0
text = "Settings"
label_settings = SubResource("LabelSettings_y7utm")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(641, 358)
scale = Vector2(4, 4)
texture = ExtResource("3_433lo")
metadata/_edit_lock_ = true

[node name="Master_label" type="Label" parent="."]
layout_mode = 0
offset_left = 494.0
offset_top = 260.0
offset_right = 611.0
offset_bottom = 290.0
text = "Master"
label_settings = ExtResource("4_xcss6")

[node name="Master_number" type="Label" parent="Master_label"]
layout_mode = 0
offset_left = 407.0
offset_top = -3.0
offset_right = 455.0
offset_bottom = 27.0
text = "5"
label_settings = ExtResource("5_ca0vt")
horizontal_alignment = 1

[node name="Master" type="HSlider" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 264.0
offset_right = 812.0
offset_bottom = 276.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("2_wrod0")
max_value = 1.0
step = 0.1

[node name="SFX_label" type="Label" parent="."]
offset_left = 516.0
offset_top = 317.0
offset_right = 585.0
offset_bottom = 347.0
text = "SFX"
label_settings = ExtResource("4_xcss6")

[node name="SFX_number" type="Label" parent="SFX_label"]
offset_left = 385.0
offset_top = -4.0
offset_right = 433.0
offset_bottom = 26.0
text = "5"
label_settings = ExtResource("5_ca0vt")
horizontal_alignment = 1

[node name="SFX" type="HSlider" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 317.0
offset_right = 812.0
offset_bottom = 333.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("2_wrod0")
max_value = 1.0
step = 0.1

[node name="Music_label" type="Label" parent="."]
offset_left = 505.0
offset_top = 372.0
offset_right = 604.0
offset_bottom = 402.0
text = "Music"
label_settings = ExtResource("4_xcss6")

[node name="Music_number" type="Label" parent="Music_label"]
offset_left = 396.0
offset_top = -3.0
offset_right = 444.0
offset_bottom = 27.0
text = "5"
label_settings = ExtResource("5_ca0vt")
horizontal_alignment = 1

[node name="Music" type="HSlider" parent="."]
layout_mode = 0
offset_left = 665.0
offset_top = 373.0
offset_right = 812.0
offset_bottom = 389.0
scale = Vector2(1.5, 1.5)
theme = ExtResource("2_wrod0")
max_value = 1.0
step = 0.1

[node name="Quit_game" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 515.0
offset_top = 443.0
offset_right = 579.0
offset_bottom = 461.0
scale = Vector2(4, 4)
texture_hover = ExtResource("7_3kdbe")

[node name="Label" type="Label" parent="Quit_game"]
layout_mode = 0
offset_left = 9.0
offset_top = 5.75
offset_right = 198.0
offset_bottom = 35.75
scale = Vector2(0.25, 0.25)
text = "Quit Game"
label_settings = ExtResource("4_xcss6")
horizontal_alignment = 1

[node name="close" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_xinc4")
volume_db = -40.0
bus = &"SFX"

[node name="move" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_xajym")
volume_db = -20.0
bus = &"SFX"

[node name="quit" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_wx0ec")
volume_db = -20.0
bus = &"SFX"

[connection signal="mouse_entered" from="Master" to="." method="_on_master_mouse_entered"]
[connection signal="value_changed" from="Master" to="." method="_on_master_value_changed"]
[connection signal="mouse_entered" from="SFX" to="." method="_on_sfx_mouse_entered"]
[connection signal="value_changed" from="SFX" to="." method="_on_sfx_value_changed"]
[connection signal="mouse_entered" from="Music" to="." method="_on_music_mouse_entered"]
[connection signal="value_changed" from="Music" to="." method="_on_music_value_changed"]
[connection signal="mouse_entered" from="Quit_game" to="." method="_on_quit_game_mouse_entered"]
[connection signal="pressed" from="Quit_game" to="." method="_on_quit_game_pressed"]
